package com.example.notificationapp.model;

/**
 * 通知チャネルの種別。
 */
public enum NotificationChannel {
    EMAIL,
    SMS,
    SLACK
}
