package com.example.notificationapp.model;

/**
 * 通知送信の結果ステータス。
 */
public enum NotificationStatus {
    SUCCESS,
    FAILURE
}
